--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL=https://foura5-atelier-deploiement-seanngg.onrender.com/api
+VITE_BACKEND_URL=https://foura5-atelier-deploiement-seanngg.onrender.com/api/
